--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width initial-scale=1 user-scalable=no" />
   <title>board games</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="./presentation/presentation.css" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
